# PhiCEA

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: ci.yaml
src/: App.vue  config.ts  main.ts
src-tauri/: Cargo.toml  config.example.json  salt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sql/: up.sql
src-tauri/src/: command.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  error_log.rs  job.rs
src/assets/: matplotlib.theme.json
src/components/: common.ts
src/router/: activities.ts  index.ts
src/stores/: config.ts  database.ts  errorLog.ts  job.ts
src/views/: Dashboard.vue  Home.vue  Layout.vue  Main.vue  SolutionProcess.vue
src/views/layout/: ActivityBar.vue  JobExplorer.vue  ParameterCard.vue  Settings.vue
