[package]
name = "insight"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
regex = "1.11.1"
lazy_static = "1.5.0"
rayon = "1.10.0"
chrono = "0.4.40"
tokio = { version = "1.44.2", features = ["sync", "macros"] }
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "macros",
] }
tauri-plugin-sql = { version = "2", features = ["postgres"] }
thiserror = "2.0.12"
flate2 = "1.1.1"
rmp-serde = "1.3.0"
ahash = "0.8.12"
